# convertToNWB

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
conv/: MovieParadigm.py  __init__.py  electrodes.py  general.py  info.py  io.py  measures.py  parser.py  paths.py  process.py  settings.py  task.py  timestamps.py  utils.py  validate.py
metadata/: device_info.yaml  device_info_nlyx.yaml  electrode_info.yaml  events_info.yaml  intervals_info.yaml  position_info.yaml  session_info.yaml  session_info_movie_paradigm.yaml  sorting_info.yaml  spike_sorting_info.yaml  stimulus_info.yaml  study_info.yaml  subject_info.yaml  task_info.yaml  timestamps_info.yaml  trial_info.yaml  units_info.yaml
notebooks/: 00-IntroAndMetadata.ipynb  01-ConvertToNWB.ipynb  02-RunConversion.ipynb  03-ExploreData.ipynb  A1-ExploreData.ipynb  CheckTimestamp.ipynb  CompareMicroData.ipynb  LFPinputSetup_Brandon.ipynb  NLXEventsLoad.ipynb  README.md  neuralynx-to-nwb.ipynb
notebooks/example_files/: example_metadata.yaml
scripts/: MovieParadigm.py  check_files.py  convert_data.py  convert_nlx_to_nwb.py  neuroconv_example.py  paths.py  prepare_data.py  run_all_conversion.py  settings.py
