[tool.poetry]
name = "conv"
version = "0.1.0"
description = "convert electrophsiology data (neuralyx and blackrock) to NWB format"
authors = ["Xin Niu <michaelniki1988@gmail.com>"]
package-mode = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.0"
pandas = "^2.1.4"
pynwb = "^2.5.0"
neuroconv = "^0.4.7"
convnwb = { git = "https://github.com/HSUPipeline/convnwb" }
packaging = "^24.0"
spikeinterface = "^0.100.1"
jupyterlab = "^4.1.0"
python-dateutil = "^2.9.0"
neo = "^0.13.0"
#neo = { git = "git@github.com:NxNiki/python-neo.git", branch = "multiple_filenames" }
seaborn = "^0.13.0"
astropy = "^6.0.1"

[tool.pre-commit]
version = "2.13.0"
exclude = ".venv|_build|build|dist"
hooks = [
    "isort",
    "mypy",
    "black",
    "pylint"
]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py39']

[tool.poetry.scripts]
pre-commit = 'pre_commit_hooks:run'



